# platform

./: .flake8  .gitignore  Procfile  main.py  pyproject.toml  requirements.txt  test_db.db
alembic/: env.py
alembic/versions/: d99d5f685307_.py
config/: config.py  security.py
src/config/: config.py  security.py
src/core/apis/: base.py  route_login.py  utils.py
src/core/repository/models/: publication.py  users.py
src/core/repository/sqlalchemy/: base.py  session.py
src/core/schemas/: publications.py  users.py
src/core/web_apps/: base.py
src/core/web_apps/auth/: forms.py  route_login.py
src/core/web_apps/publication/: forms.py  route_publications.py
src/core/web_apps/users/: forms.py  route_users.py
src/services/apis/: base.py  route_login.py
src/services/repository/models/: publication.py  users.py
src/services/repository/sqlalchemy/: base.py  session.py
src/services/schemas/: publications.py
src/services/web_apps/: base.py
src/services/web_apps/auth/: forms.py  route_login.py
src/services/web_apps/publication/: route_publications.py
static/css/: main.css
static/js/: autocomplete.js
templates/: frontpage.html  list_item.html
templates/auth/: login.html
templates/components/: card.html  navbar.html
templates/publications/: create_publication.html  detail.html  show_publications_to_delete.html
templates/shared/: base.html  layout.html
templates/users/: register.html
tests/: conftest.py
tests/main/: test_health_check.py  test_page_home.py
tests/templates/publications/: test_templates.py
tests/utils/: users.py
(+26 files in other folders)
